tests/sema/fail/v3_fail_i32_literal_range.ep
# COMPILE_FAIL: let x expected i32, got i64; use i32(... ) for an explicit conversion

fun main(): i64 {
    let x: i32 = 2147483648
    return x
}
